objects/Case_Team__c.object
<CustomObject>
    <description>Used to look up the case record type and team based on the incoming email address</description>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Service_Address__c</fullName>
        <description>Email Service Address used to lookup the record type</description>
        <inlineHelpText>Email Service Address used to lookup the record type</inlineHelpText>
        <label>Email Service Address</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipName>CaseTeams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type_Developer_Name__c</fullName>
        <description>Developer name of the record type</description>
        <inlineHelpText>Developer name of the record type</inlineHelpText>
        <label>Record Type Developer Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_Name__c</fullName>
        <label>Team Name</label>
        <referenceTo>Team__c</referenceTo>
        <relationshipLabel>Team Emails</relationshipLabel>
        <relationshipName>Team_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Team</description>
        <inlineHelpText>Team</inlineHelpText>
        <label>Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Team Email</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Email_Service_Address__c</columns>
        <columns>Record_Type_Developer_Name__c</columns>
        <columns>Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Team Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>